--- a/style.css
+++ b/style.css
@@ -97,3 +97,51 @@ p{
     border: none;
     margin-top: 15px;
 }
+
+@media screen and (max-width: 800px ){
+    
+    *{
+        padding: 0;
+        margin-right: 0;
+        margin-bottom: 0;
+        
+    }
+    
+    .img{
+        width: 200px;
+        height: 180px;
+        margin-left: 170px;
+    }
+
+    section{
+        margin-left: 30px;
+    }
+    
+    h1{
+    font-size: 20px;
+    line-height: 35px;
+    margin-top: 30px;
+    
+    text-align: center;
+
+    }
+
+    p{
+    font-size: 14px;
+    line-height: 30px;
+    margin-top: -90px;
+    text-align: center;
+    padding: 100px;
+    }
+
+    button{
+        padding-left: 200px;
+    }
+
+    header{
+        display: none;
+    }
+
+    
+
+}
